--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1 class="bg-success">Selam amk evladı</h1>
+<app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 140px">
+  <h1>Hoşgeldin tırrım</h1>
+  <ul>
+    <li class="list-unstyled" *ngFor="let product of products">
+      {{product.name}}
+    </li>
+  </ul>
+</div>
+
