--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="me-3 py-2  text-decoration-none" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">Anasayfa</a>
       <a class="me-3 py-2  text-decoration-none" routerLink="/shop" routerLinkActive="active">Mağaza</a>
-      <a class="me-3 py-2  text-decoration-none" href="#">Destek</a>
+      <a class="me-3 py-2  text-decoration-none" routerLink="/test-error" routerLinkActive="active">Destek</a>
     </nav>
     
     <div class="d-flex align-items-center">
