--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container mt-4">
   <div class="row">
     <section class="col-3">
+      <ng-container *ngIf="(types&&brands)">
       <h5 class="text-warning me-3" >Sırala</h5>
       <select style="width:300px ;"  
       class="custom-select mb-3"
@@ -29,8 +30,9 @@
     
     >{{item.name}}</li>
   </ul>
-
+</ng-container>
     </section>
+    
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
         <app-paging-header 
@@ -39,7 +41,7 @@
         [pageNumber]="this.shopParams.pageNumber"
         
         ></app-paging-header>
-        <div class="form-inline mt-2">
+        <div class="form-inline mt-2" *ngIf="products">
           <input (keyup.enter)="onSearch()" type="text" #search class="form-control me-3" style="width:300px; display: inline;" placeholder="Ara">
           <button (click)="onSearch()" class="btn btn-outline-primary me-2 mb-1">Ara</button>
           <button (click)="onReset()" class="btn btn-outline-success me-2 mb-1">Yenile</button>
