--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,8 +8,8 @@
     </nav>
     
     <div class="d-flex align-items-center">
-        <a class="position-relative"><i class="fa fa-shopping-cart fa-2x me-5" aria-hidden="true"></i>
-          <div class="cart-no">5</div>
+        <a routerLink="/basket" class="position-relative"><i class="fa fa-shopping-cart fa-2x me-5" aria-hidden="true"></i>
+          <div *ngIf="(basket$ | async) as basket" class="cart-no">{{this.basket.items.length}}</div>
         </a>
         <a class="btn btn-outline-secondary me-2">Giriş</a>
         <a class="btn btn-outline-secondary me-3">Kayıt</a>
