--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -11,8 +11,36 @@
         <a routerLink="/basket" class="position-relative"><i class="fa fa-shopping-cart fa-2x me-5" aria-hidden="true"></i>
           <div *ngIf="(basket$ | async) as basket" class="cart-no">{{this.basket.items.length}}</div>
         </a>
-        <a class="btn btn-outline-secondary me-2">Giriş</a>
-        <a class="btn btn-outline-secondary me-3">Kayıt</a>
+
+        <ng-container *ngIf="(currentUser$ | async)===null">
+          <a routerLink="account/login" class="btn btn-outline-secondary me-2">Giriş</a>
+          <a routerLink="account/register" class="btn btn-outline-secondary me-3">Kayıt</a>
+        </ng-container>
+
+     
+
+        <ng-container *ngIf="currentUser$ | async">
+          <div class="dropdown ms-3 me-5" dropdown>
+            <a class="dropdown-toggle" style="cursor: pointer" dropdownToggle>
+              <strong>Hoşgeldin {{(currentUser$ | async).displayName}}</strong>  
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" style="cursor: pointer;" *dropdownMenu>
+              <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
+                <i class="fa fa-shopping-cart me-3"></i> Sepetin
+              </a>
+              <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+                <i class="fa fa-history me-3"></i> Siparişlerin
+              </a>
+              <div class="dropdown-divider"></div>
+              <a (click)="this.logout()" class="dropdown-item d-flex align-items-center py-2">
+                <i class="fa fa-sign-out me-3"></i> Çıkış
+              </a>
+            </div>
+          </div>
+        
+        </ng-container>
+
+        
     </div>
    
   </div>
