--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -1,1 +1,24 @@
-<p>checkout works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-8">
+            <app-stepper [linearModeSelected]="false" #appStepper >
+                <cdk-step [label]="'Adres'">
+                    <app-address [checkoutForm]="checkoutForm" ></app-address>
+                </cdk-step>
+                <cdk-step [label]="'Kargolama'">
+                    <app-delivery [checkoutForm]="checkoutForm"></app-delivery>
+                </cdk-step>
+                <cdk-step [label]="'İncele'">
+                    <app-review></app-review>
+                </cdk-step>
+                <cdk-step [label]="'Ödeme'">
+                    <app-payment></app-payment>
+                </cdk-step>
+
+            </app-stepper>
+        </div>
+        <div class="col-4">
+            <app-order-total></app-order-total>
+        </div>
+    </div>
+</div>
