--- a/client/src/app/checkout/payment/payment.component.html
+++ b/client/src/app/checkout/payment/payment.component.html
@@ -1,1 +1,9 @@
 <p>payment works!</p>
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5 mt-3">
+    <button class="btn btn-outline-primary" cdkStepperPrevious  >
+        <i class="fa fa-angle-left"></i> Sipariş Özetine Dön
+    </button>
+    <button class="btn btn-primary" (click)="submitOrder()" >
+        Sipariş Onayla <i class="fa fa-angle-right"></i> 
+    </button>
+</div>
