--- a/client/src/app/checkout/review/review.component.html
+++ b/client/src/app/checkout/review/review.component.html
@@ -1,3 +1,11 @@
 <div class="container mt-4">
     <app-basket-summary [isBasket]="false"></app-basket-summary>
 </div>
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5 mt-3">
+    <button class="btn btn-outline-primary" cdkStepperPrevious  >
+        <i class="fa fa-angle-left"></i> Kargo Seçimine Dön
+    </button>
+    <button class="btn btn-primary" cdkStepperNext>
+        Devam Et <i class="fa fa-angle-right"></i> 
+    </button>
+</div>
