--- a/client/src/app/shared/components/basket-summary/basket-summary.component.html
+++ b/client/src/app/shared/components/basket-summary/basket-summary.component.html
@@ -1,3 +1,5 @@
+
+<ng-container *ngIf="basket$ | async">
 <div class="table-responsive">
     <table class="table">
         <thead>
@@ -55,3 +57,4 @@
         </tbody>
     </table>
 </div>
+</ng-container>
