--- a/client/src/app/checkout/address/address.component.html
+++ b/client/src/app/checkout/address/address.component.html
@@ -1,8 +1,12 @@
 <div class="mt-4" [formGroup]="checkoutForm">
     <div class="d-flex justify-content-between align-items-center">
         <h4>Kargo Adresi</h4>
-        <button class="btn btn-outline-success mb-3">
-            Adresi kaydet
+        <button 
+            (click)="saveUserAddress()" 
+            [disabled]="!checkoutForm.get('addressForm').valid || 
+                !checkoutForm.get('addressForm').dirty"
+            class="btn btn-outline-success mb-3">
+            Adresi Kaydet
         </button>
     </div>
     <div class="row" formGroupName="addressForm">
@@ -22,4 +26,12 @@
             <app-text-input [label]="'Posta Kodunuz'" formControlName="zipCode"></app-text-input>
         </div>
     </div>
+</div>
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5 mt-3">
+    <button class="btn btn-outline-primary" routerLink="/basket"  >
+        <i class="fa fa-angle-left"></i> Sepete Geri Dön
+    </button>
+    <button class="btn btn-primary" cdkStepperNext>
+        Devam Et <i class="fa fa-angle-right"></i> 
+    </button>
 </div>
