--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -2,17 +2,17 @@
     <div class="row">
         <div class="col-8">
             <app-stepper [linearModeSelected]="false" #appStepper >
-                <cdk-step [label]="'Adres'">
+                <cdk-step [label]="'Adres'" [completed]="(checkoutForm.get('addressForm')).valid">
                     <app-address [checkoutForm]="checkoutForm" ></app-address>
                 </cdk-step>
-                <cdk-step [label]="'Kargolama'">
+                <cdk-step [label]="'Kargolama'" [completed]="(checkoutForm.get('deliveryForm')).valid">
                     <app-delivery [checkoutForm]="checkoutForm"></app-delivery>
                 </cdk-step>
                 <cdk-step [label]="'İncele'">
                     <app-review></app-review>
                 </cdk-step>
-                <cdk-step [label]="'Ödeme'">
-                    <app-payment></app-payment>
+                <cdk-step [label]="'Ödeme'"  >
+                    <app-payment [checkoutForm]="checkoutForm" ></app-payment>
                 </cdk-step>
 
             </app-stepper>
